--- a/note01.ipynb
+++ b/note01.ipynb
@@ -70,7 +70,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 문장이란"
+    "### 문장이란 tokenization"
    ]
   },
   {
@@ -102,8 +102,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-29T08:49:21.439016Z",
-     "start_time": "2019-09-29T08:49:21.435024Z"
+     "end_time": "2019-09-29T09:38:31.652834Z",
+     "start_time": "2019-09-29T09:38:31.570837Z"
     }
    },
    "outputs": [],
@@ -113,77 +113,178 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-09-29T09:38:31.949829Z",
+     "start_time": "2019-09-29T09:38:31.945834Z"
+    }
+   },
    "outputs": [],
-   "source": []
+   "source": [
+    "kor_sentence = \"오늘 날씨 좋다\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-09-29T09:38:32.421531Z",
+     "start_time": "2019-09-29T09:38:32.288885Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "tokenizer = Okt()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-09-29T09:42:32.183837Z",
+     "start_time": "2019-09-29T09:42:29.874045Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['오늘', '날씨', '좋다']"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# morphs 함수로 형태소 분석\n",
+    "tokenizer.morphs(kor_sentence)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-09-29T09:46:11.295319Z",
+     "start_time": "2019-09-29T09:46:11.282354Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('오늘', 'Noun'), ('날씨', 'Noun'), ('좋다', 'Adjective')]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# pos 함수로 품사 태깅\n",
+    "tokenized_sent = tokenizer.pos(kor_sentence)\n",
+    "tokenized_sent"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-09-29T09:48:13.461974Z",
+     "start_time": "2019-09-29T09:48:13.455992Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('오늘', '명사'), ('날씨', '명사'), ('좋다', '형용사')]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 영어로 된 품사 정보를 한글로 전환\n",
+    "[(k, tokenizer.tagset.get(v)) for k, v in tokenized_sent]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 단어장 생성 vocabulary"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "단어장(vocabulary)를 생성하는 과정은 중복되지 않는 토큰에 고유한 인덱스(index)를 부여하는 과정이다.\n",
+    "Python에서는 보통 dictionary 자료 구조로 단어장(vocabulary)을 생성한다.\n",
+    "네이버 감성 영화 코퍼스(naver sentiment movie corpus) 데이터를 사용해서 어떻게 진행되는지 알아본다.\n",
+    "이 데이터는 6만개의 댓글과 긍정 혹은 부정을 나타내는 라벨로 구성되어 있으며 그 사이는 tab으로 분리되어 있다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-09-29T10:18:46.878524Z",
+     "start_time": "2019-09-29T10:18:46.874566Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "from konlpy.tag import Okt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-09-29T10:18:57.766413Z",
+     "start_time": "2019-09-29T10:18:57.762455Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "tokenizer = Okt()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-09-29T10:32:24.882165Z",
+     "start_time": "2019-09-29T10:32:24.623820Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "with open(\"./data/jk_train.txt\", encoding='UTF8') as file:\n",
+    "    raw_data = file.read().splitlines()[1:]\n",
+    "    data = [line.split(\"\\t\")[1:] for line in raw_data]\n",
+    "    data = [(tokenizer.morphs(sent), int(label)) for (sent, label) in data]"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": []
   }
  ],
