--- a/note01.ipynb
+++ b/note01.ipynb
@@ -61,8 +61,8 @@
    "metadata": {},
    "source": [
     "1. tokenization - 문장의 토큰화\n",
-    "2. vocabulary - 중복되지 않은 토근으로 vocabulary 생성 후, 숫자와 1대 1 대응\n",
-    "3. numericalization - 단어장(vocabulary)를 기반으로 토큰을 숫자로 전환 \n",
+    "2. vocabulary - 중복되지 않은 토큰(token)으로 vocabulary 생성 후, 숫자와 1대 1 대응\n",
+    "3. numericalization - 단어장(vocabulary)를 기반으로 토큰(token)을 숫자로 전환 \n",
     "4. padding - 길이가 다양한 문장을 동일한 길이로 만들어 주는 padding 과정"
    ]
   },
@@ -93,7 +93,7 @@
     "* token - 문자열 : '오' + '늘' + ' ' + '날' + '씨' + ' ' + '좋' + '다'\n",
     "\n",
     "**중요한 포인트**<br>\n",
-    "영어의 경우 띄어쓰기로 단어 위주의 토큰화를 할 수 있다.(nltk, SpaCy)(띄어쓰기 기준 split)\n",
+    "영어의 경우 띄어쓰기로 단어 위주의 토큰화를 할 수 있다.(nltk, SpaCy)(띄어쓰기 기준 split)<br>\n",
     "한글의 경우 띄어쓰기로 토큰화할 경우 단어 수가 많아지기 때문에 형태소 단위의 토큰화를 기본으로 한다.(KoNLPy)"
    ]
   },
@@ -102,8 +102,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-29T09:38:31.652834Z",
-     "start_time": "2019-09-29T09:38:31.570837Z"
+     "end_time": "2019-09-30T01:33:20.159289Z",
+     "start_time": "2019-09-30T01:33:20.078449Z"
     }
    },
    "outputs": [],
@@ -116,8 +116,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-29T09:38:31.949829Z",
-     "start_time": "2019-09-29T09:38:31.945834Z"
+     "end_time": "2019-09-30T01:33:20.661790Z",
+     "start_time": "2019-09-30T01:33:20.656806Z"
     }
    },
    "outputs": [],
@@ -130,8 +130,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-29T09:38:32.421531Z",
-     "start_time": "2019-09-29T09:38:32.288885Z"
+     "end_time": "2019-09-30T01:33:21.460556Z",
+     "start_time": "2019-09-30T01:33:21.192395Z"
     }
    },
    "outputs": [],
@@ -144,8 +144,8 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-29T09:42:32.183837Z",
-     "start_time": "2019-09-29T09:42:29.874045Z"
+     "end_time": "2019-09-30T01:33:25.419682Z",
+     "start_time": "2019-09-30T01:33:22.404253Z"
     }
    },
    "outputs": [
@@ -167,11 +167,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-29T09:46:11.295319Z",
-     "start_time": "2019-09-29T09:46:11.282354Z"
+     "end_time": "2019-09-30T01:33:25.457581Z",
+     "start_time": "2019-09-30T01:33:25.437602Z"
     }
    },
    "outputs": [
@@ -181,7 +181,7 @@
        "[('오늘', 'Noun'), ('날씨', 'Noun'), ('좋다', 'Adjective')]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -194,11 +194,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-29T09:48:13.461974Z",
-     "start_time": "2019-09-29T09:48:13.455992Z"
+     "end_time": "2019-09-30T01:33:27.693603Z",
+     "start_time": "2019-09-30T01:33:27.687617Z"
     }
    },
    "outputs": [
@@ -208,7 +208,7 @@
        "[('오늘', '명사'), ('날씨', '명사'), ('좋다', '형용사')]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -237,11 +237,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-29T10:18:46.878524Z",
-     "start_time": "2019-09-29T10:18:46.874566Z"
+     "end_time": "2019-09-30T01:33:46.844812Z",
+     "start_time": "2019-09-30T01:33:46.840474Z"
     }
    },
    "outputs": [],
@@ -251,11 +251,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-29T10:18:57.766413Z",
-     "start_time": "2019-09-29T10:18:57.762455Z"
+     "end_time": "2019-09-30T01:33:47.511279Z",
+     "start_time": "2019-09-30T01:33:47.506261Z"
     }
    },
    "outputs": [],
@@ -265,11 +265,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-29T10:32:24.882165Z",
-     "start_time": "2019-09-29T10:32:24.623820Z"
+     "end_time": "2019-09-30T01:33:49.167481Z",
+     "start_time": "2019-09-30T01:33:48.617983Z"
     }
    },
    "outputs": [],
